# metagraph

./: .gitmodules  pyproject.toml
metagraph/metaschema/core/parsers/: datatypes.py  elements.py  model_parser.py  mxml.py  validators.py
tests/level1/case001/: instance.json  instance.xml  metaschema.xml
tests/level1/case002/: instance.xml  metaschema.xml
