[tool.poetry]
name = "metagraph"
version = "0.0.1"
description = "A fun collection of tools to understand the Metaschema universe in graph form."
authors = ["Alexander Stein <alexander.stein@nist.gov>"]
license = "NIST-PD-fallback"

[tool.poetry.dependencies]
python = "^3.9"
xmlschema = "==2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
